--- a/main.css
+++ b/main.css
@@ -1,245 +1,193 @@
-body {
-    clear: both;
-    width: 100%;
-    font-family: 'Droid Serif', serif;
-    background-color: #92B7C4;
-    padding: 0%;
-    margin: 0%;
-    margin-top: 0;
-}
-.header {
-    background-color: #549AA6;
-    width: 100%;
-    height: 60px;
-    margin 0%;
-    padding: 0%;
-    position: fixed;
-    top: 0%;
-    z-index: 99;
-}
-.nav {
-    width: 75%;
-    margin: 0%;
-    padding: 0%;
-    list-style-type: none;
-    margin: 0% 12.5% 0% 12.5%;
-}
-.nav_list {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-    margin: 0%;
-    padding: 0%;
-    height: 60px;
-    width: 10%;
-}
-.container {
-    width: 75%;
-    margin: 0% 12.5% 0% 12.5%;
-    min-height: 960px;
-    background-color: aliceblue;
-    margin-top: 60px;
-}
-.nav_url {
-    text-decoration: none;
-    color: white;
-    font-size: 1.5em;
-    transition: all 0.3s ease-in;
-}
-.nav_url:hover {
-    font-size: 2em;
-    color: #FFBA81;
-    transition: all 0.3s ease-in;
-}
-#nav_1 {
-    font-size: 2em;
-    color: #FFBA81;
-}
-#img_container {
-    width: 15%;
-    height: 30%;
-    border-radius: 250px;
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-    position: absolute;
-    left: 42.75%;
-    top: 20%;
-	-webkit-transition: all 0.6s ease-in;
-}
-#img_description {
-	margin: 0;
-	font-size: 2em;
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 38.85%;
-	-webkit-transition: all 0.6s ease-in;
-}
-p {
-	margin: 0;
-	padding: 0;
-}
-footer {
-	height: 60px;
-	width: 100%;
-	text-align: center;
-	font-size: 0.75em;
-	color: white;
-	background-color: #549AA6;
-	vertical-align: middle;
-}
-footer > p {
-	padding: 1%;
+html
+{
+    position: relative;
+    min-height: 100%;
 }
 
+body
+{
+    clear: both;
+    padding: 0;
+    margin: 0;
+    background-color: #92B7C4 !important;
+    font-family: 'Droid Serif', serif !important;
+}
+
+html, body
+{
+    height: 100% !important; 
+}
+
+.container
+{
+    height: 100% !important;
+}
+
+.fill
+{
+    height: 100% !important;
+    min-height: 100% !important;
+}
+
+/* Navigation bar styling */
+
+.navbar
+{
+    background-color: #549AA6 !important;
+    border: none !important;
+}
+li > .nav_link
+{
+    font-size: 1.5em;
+    color: aliceblue;
+}
+.current
+{
+    background-color: aliceblue;
+    color: #FFBA81 !important;
+}
+ul.nav > li > a:hover
+{   
+    color: #FFBA81 !important;
+    background-color: #F0F0F0 !important;
+}
+.navbar-toggle > .icon-bar
+{
+    background-color: aliceblue !important;
+}
+.navbar-toggle:hover > .icon-bar
+{
+    background-color: #92B7C4 !important;
+}
+.navbar-toggle:hover
+{
+    background-color: aliceblue !important;
+}
+
+.navbar-toggle
+{
+    float: left !important;
+    margin: 0 20px;
+}
+
+/* Page content holder styling */
+
+#content_holder
+{
+    margin-top: 50px;
+    background-color: aliceblue;
+    vertical-align: baseline;
+    padding: 10% 0% 0% 0%;
+}
+#img_container
+{
+    transform: translate(-50%, 0%);
+    background-image: url("https://scontent-mad1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10003119_294288357395090_552386787_n.jpg?oh=a684779d192bf24703e9249c3fed028a&oe=56497A13");
+	background-size: 250px 300px;
+	width: 250px;
+	height: 250px;
+	border-radius: 100%;
+	margin: 0 50%;
+}
+#img_description
+{
+    margin-top: 20px;
+	font-size: 2em;
+	text-align: center;
+}
 .myButton {
 	background-color: #549AA6;
 	border:1px solid #92B7C4;
-	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family: 'Droid Serif', serif;
-	font-size:16px;
+	font-size: 1.25em;
 	padding:1.0% 2.25%;
 	text-decoration:none;
-	position: absolute;
-	top: 60%;
-	left: 47%;
 	-webkit-transition: all 0.6s ease-in;
+    margin: 0 50%;
+    transform: translate(-50%, 0);
 }
 .myButton:hover {
 	background-color: #549AA6;
 	color: #FFBA81;
 	-webkit-transition: all 0.3s ease-in;
 }
-.myButton:active {
-	position:absolute;
-	top:60.05%;
+@keyframes update
+{
+    0% { padding: 10% 0% 0% 0%; }
+    100% { padding: 7.5% 0% 0% 0%; }
 }
-#paragraph_description {
-	text-align: center;
-	-webkit-animation-name: fade;
-	-webkit-animation-duration: 2s;
+@keyframes update_text
+{
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+#new_description
+{
+    margin-top: 20px;
+    font-size: 1.15em;
+    padding: 0% 22%;
+    text-align: center;
 }
 
-@keyframes fade {
-	0% { color: aliceblue; }
-	100% { color: black; }
+/* Footer styling */
+
+.footer
+{
+    background-color: #549AA6;
+    color: aliceblue;
+    position: fixed;
+    text-align: center;
+    height: 50px;
+    bottom: 0;
+    width: 100%;
 }
-#etfos1 {
-	border: 1px solid;
-	border-color: #549AA6;
-	float: left;
-	margin: 5%;
-	
+.footer > p
+{
+    transform: translate(0%, 75%);
+    font-size: 1.05em;
 }
-#etfos2 {
-	border: 1px solid;
-	border-color: #549AA6;
-	float: right;
-	width: 17.5%;
-	margin: 5%;
+
+/* Faculty content styling */
+
+#f_img
+{
+    float: left;
+    margin: 15px;
+    border: 1px solid #549AA6;
 }
-#faculty_description > p {
+
+#content_holder_faculty
+{
+    margin-top: 50px;
+    background-color: aliceblue;
+    vertical-align: baseline;
+    padding: 5% 0% 0% 0%;
+    text-align: justify;
+}
+
+#content_holder_faculty > p
+{
+    padding-right: 5%;
+}
+
+/* MyWork styling */
+
+#work_description
+{
 	padding: 5%;
+    text-align: center;
 }
-#image_frame {
-	position: absolute;
-	top: 10%;
-	left: 31.72%;
-	width: 36.6%;
-	height: 40%;
-}
-#img_id {
-	width: auto;
-	height: 100%;
-	display: block;
-	margin: 0 auto;
-	
-}
-#img_description_pl {
-	text-align: center;
-	width: 40%;
-	position: absolute;
-	top: 60%;
-	left: 30%;
-}
-@keyframes fadein {
-	0% { opacity: 0; }
-	100% { opacity: 1; }
-}
-@keyframes fadeout {
-	0% { opacity: 1; }
-	100% { opacity: 0; }
-}
-#button_holder {
-	width: 75%;
-	height: 60px;
-	position: absolute;
-	top: 48%;
-	text-align: center;
-}
-.gallery_button {
-	background-color: #549AA6;
-	border:1px solid #92B7C4;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family: 'Droid Serif', serif;
-	font-size:16px;
-	padding:1.0% 2.25%;
-	position: relative;
-	margin: 2% 5% 2% 5%;
-	text-decoration:none;
-	-webkit-transition: all 0.6s ease-in;
-}
-.gallery_button:hover {
-	background-color: #549AA6;
-	color: #FFBA81;
-	-webkit-transition: all 0.3s ease-in;
-}
-#work_description {
-	padding: 5%;
-	text-align: center;
-}
-.work_example {
+
+.work_example
+{
 	width: 50%;
 	height: 50%;
 	border: 1px solid #549AA6;
-	margin: 2%;
 }
-#login_container {
-	position: absolute;
-	text-align: center;
-	left: 42.5%;
-	top: 35%;
-	width: 15%;
-	height: 15%;
-}
-input {
-	border: 1px solid #549AA6;
-}
-#user_login_container {
-	position: absolute !Important;
-	font-family: 'Droid Serif', serif;
-	font-size: 1.5em !Important;
-	top: 20% !Important;
-	width: 75%;
-	text-align: center;
-}
-#contact_info {
-	position: absolute;
-	top: 30%;
-	width: 75%;
-	text-align: center;
-}
-#mail_form {
-	position: absolute;
-	top: 40%;
-	width: 75%;
-}
-#mail_form > form {
-	position: absolute;
-	width 50%;
-	left: 37%;
+
+#img_note
+{
+    margin: 20px;
 }
