--- a/main.css
+++ b/main.css
@@ -82,6 +82,8 @@ ul.nav > li > a:hover
 #img_container
 {
     transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
     background-image: url("https://scontent-mad1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10003119_294288357395090_552386787_n.jpg?oh=a684779d192bf24703e9249c3fed028a&oe=56497A13");
 	background-size: 250px 300px;
 	width: 250px;
@@ -107,6 +109,8 @@ ul.nav > li > a:hover
 	-webkit-transition: all 0.6s ease-in;
     margin: 0 50%;
     transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
 }
 .myButton:hover {
 	background-color: #549AA6;
@@ -146,6 +150,8 @@ ul.nav > li > a:hover
 .footer > p
 {
     transform: translate(0%, 75%);
+    -ms-transform: translate(0%, 75%);
+    -webkit-transform: translate(0%, 75%);
     font-size: 1.05em;
 }
 
