--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ ul.nav > li > a:hover
     transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     -webkit-transform: translate(-50%, 0%);
-    background-image: url("https://scontent-mad1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10003119_294288357395090_552386787_n.jpg?oh=a684779d192bf24703e9249c3fed028a&oe=56497A13");
+    background-image: url("https://scontent-vie1-1.xx.fbcdn.net/hphotos-xtp1/v/t1.0-9/10671453_354965171327408_6088938185901743670_n.jpg?oh=c26f624ff08cee8ed26b184e65d22751&oe=56F28B18");
 	background-size: 250px 300px;
 	width: 250px;
 	height: 250px;
