--- a/main.css
+++ b/main.css
@@ -204,4 +204,9 @@ ul.nav > li > a:hover
 	{
 	    padding: 5% 0% 0% 0%;
 	}
+	@keyframes update
+	{
+	    0% { padding: 5% 0% 0% 0%; }
+	    100% { padding: 4% 0% 0% 0%; }
+	}
 }
