--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ ul.nav > li > a:hover
     transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     -webkit-transform: translate(-50%, 0%);
-    background-image: url("https://scontent-vie1-1.xx.fbcdn.net/hphotos-xpl1/v/t1.0-9/10003119_294288357395090_552386787_n.jpg?oh=dcde2c0bd091ad382249fbad7b0358bf&oe=5785E213");
+    background-image: url("https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/10003119_294288357395090_552386787_n.jpg?oh=21b4aa2ef66bc8975bdae9a2467f2a58&oe=58733013");
 	background-size: 250px 300px;
 	width: 250px;
 	height: 250px;
