--- a/main.css
+++ b/main.css
@@ -15,18 +15,12 @@ body
 
 html, body
 {
-    height: 100% !important; 
+    height: 90% !important; 
 }
 
 .container
 {
     height: 100% !important;
-}
-
-.fill
-{
-    height: 100% !important;
-    min-height: 100% !important;
 }
 
 /* Navigation bar styling */
@@ -84,7 +78,7 @@ ul.nav > li > a:hover
     transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     -webkit-transform: translate(-50%, 0%);
-    background-image: url("https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/10003119_294288357395090_552386787_n.jpg?oh=21b4aa2ef66bc8975bdae9a2467f2a58&oe=58733013");
+    background-image: url("./me.jpg");
 	background-size: 250px 300px;
 	width: 250px;
 	height: 250px;
