--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ ul.nav > li > a:hover
     transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     -webkit-transform: translate(-50%, 0%);
-    background-image: url("https://raw.githubusercontent.com/DomBabic/DomBabic.github.io/master/me.jpg");
+    background-image: url("me.jpg");
 	background-size: 250px 300px;
 	width: 250px;
 	height: 250px;
