Trying out new solution

--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ ul.nav > li > a:hover
     transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     -webkit-transform: translate(-50%, 0%);
-    background-image: url("https://scontent-vie1-1.xx.fbcdn.net/v/t1.0-9/10003119_294288357395090_552386787_n.jpg?oh=2f267b02ed13135153c3ef1b8dcfe812&oe=59607E13");
+    background-image: url("https://dombabic.github.io/me.JPG");
 	background-size: 250px 300px;
 	width: 250px;
 	height: 250px;
